<resources>
    <string name="app_name">Restaurant Fahni</string>
    <string name="login_name">Restaurant\nFahni Amsyari</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="belum">Belum Memiliki Akun ?</string>
    <string name="register">Daftar</string>
    <string name="masuk"><u>Masuk</u></string>
</resources>
