<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textlogo_reg"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/lucycat"
                android:text="Register"
                android:textColor="@color/colorWhite"
                android:textSize="45sp" />

            <ImageView
                android:id="@+id/image_user_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/textlogo_reg"
                android:layout_marginTop="50dp"
                android:src="@drawable/white_user_reg" />

            <RelativeLayout
                android:layout_below="@+id/image_user_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorHint">

                        <EditText
                            android:id="@+id/et_reg_input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Nama"
                            android:imeOptions="actionNext"
                            android:backgroundTint="@color/colorWhite"
                            android:textColor="@color/colorWhite"
                            android:inputType="text"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_below="@+id/reg_name"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorHint">

                        <EditText
                            android:id="@+id/et_reg_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:backgroundTint="@color/colorWhite"
                            android:textColor="@color/colorWhite"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reg_password"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorHint">

                        <EditText
                            android:id="@+id/et_reg_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:backgroundTint="@color/colorWhite"
                            android:inputType="textPassword"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/conf_password"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorHint">

                        <EditText
                            android:id="@+id/conf_reg_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Konfirmasi Password"
                            android:imeOptions="actionNext"
                            android:backgroundTint="@color/colorWhite"
                            android:inputType="textPassword"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_reg_sign_up"
                    android:layout_below="@id/conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_white"
                    android:text="Daftar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorRose"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/btn_reg_sign_up"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/sudah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sudah Memiliki Akun ?"
                        android:textSize="16sp"
                        android:textColor="@color/colorBelum"/>

                    <TextView
                        android:id="@+id/txt_reg_link_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/masuk"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>